--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-less": "^2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0"
+  },
+  "dependencies": {
+    "handlebars": "^4.7.7",
+    "less": "^4.1.1"
   }
 }
