--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Y.Practicum training",
   "scripts": {
+    "start": "node app.js",
     "dev": "./node_modules/.bin/parcel index.html",
     "build": "./node_modules/.bin/parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
     "parcel": "^2.0.0-rc.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "less": "^4.1.1"
   }
