--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "less": "^4.1.1"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
