--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Y.Practicum training",
   "scripts": {
     "start": "node app.js",
-    "dev": "./node_modules/.bin/parcel index.html",
-    "build": "./node_modules/.bin/parcel build index.html",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Renat",
