--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node app.js",
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "tsc --noEmit"
   },
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-less": "^2.0.0-rc.0",
-    "parcel": "^2.0.0-rc.0"
+    "parcel": "^2.0.0-rc.0",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -21,5 +23,10 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "targets": {
+    "default": {
+      "includeNodeModules": ["handlebars", "fs"]
+    }
   }
 }
