--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts --fix"
   },
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-less": "^2.0.0-rc.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "parcel": "^2.0.0-rc.0",
     "typescript": "^4.4.3"
   },
@@ -26,7 +32,10 @@
   },
   "targets": {
     "default": {
-      "includeNodeModules": ["handlebars", "fs"]
+      "includeNodeModules": [
+        "handlebars",
+        "fs"
+      ]
     }
   }
 }
