--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-less": "^2.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
