--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,9 @@
     "rules": {
         "import/extensions": "off",
         "import/prefer-default-export": "off",
-        "no-use-before-define": "off"
+        "no-use-before-define": "off",
+        "lines-between-class-members": "off",
+        "no-return-assign": "off"
     },
     "settings": {
         "import/resolver": {
