--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-image": "^2.0.0-rc.0",
-    "@parcel/transformer-less": "^2.0.0-rc.0",
+    "@parcel/transformer-less": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "typescript": "^4.4.3"
   },
   "dependencies": {
