--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node app.ts",
     "dev": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build index.html --no-optimize",
     "check": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix"
   },
@@ -30,11 +29,9 @@
     "node": ">=12.0.0"
   },
   "targets": {
-    "default": {
-      "includeNodeModules": [
-        "handlebars",
-        "fs"
-      ]
+    "global": {
+      "context": "browser",
+      "outputFormat": "global"
     }
   }
 }
