--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.ts",
     "dev": "parcel index.html",
-    "build": "parcel build index.html --no-optimize",
+    "build": "parcel build index.html --no-optimize --public-url ./",
     "check": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix"
   },
@@ -21,9 +21,11 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
-    "less": "^4.1.1"
+    "less": "^4.1.1",
+    "uuid": "^3.4.0"
   },
   "engines": {
     "node": ">=12.0.0"
