sprint 3:  add newChat/removeChat handlers and highlight the selected chat

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
         "class-methods-use-this": "off",
         "camelcase": "off",
         "function-paren-newline": "off",
-        "max-classes-per-file": "off"
+        "max-classes-per-file": "off",
+        "no-shadow": "off"
     },
     "settings": {
         "import/resolver": {
