--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
         "camelcase": "off",
         "function-paren-newline": "off",
         "max-classes-per-file": "off",
-        "no-shadow": "off"
+        "no-shadow": "off",
+        "prefer-arrow-callback": "off"
     },
     "settings": {
         "import/resolver": {
