--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
         "function-paren-newline": "off",
         "max-classes-per-file": "off",
         "no-shadow": "off",
-        "prefer-arrow-callback": "off"
+        "prefer-arrow-callback": "off",
+        "import/no-extraneous-dependencies": "off"
     },
     "settings": {
         "import/resolver": {
