--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true 
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
