--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "parcel build index.html --no-optimize --public-url ./",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha -r jsdom-global/register"
   },
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/register": "^7.16.0",
@@ -24,6 +25,8 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
+    "jsdom": "14.1.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^9.1.3",
     "parcel": "^2.0.0",
     "typescript": "^4.4.3"
