--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.ts",
     "dev": "parcel index.html",
-    "build": "parcel build index.html --no-optimize --public-url ./",
+    "build": "parcel build index.html --public-url ./",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
     "test": "./node_modules/.bin/mocha -r jsdom-global/register"
