sprint 4: initial set of testing environment

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,10 @@
 {
-  "extension": ["ts"],
+  "extension": ["ts", "js"],
   "spec": "**/*.test.ts",
-  "require": "test/babel-register.js"
+  "require": [
+    "test/babel-register.js",
+    "test/utils/dom.js",
+    "ignore-styles"
+  ],
+  "package": "./package.json"
 } 
