--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,7 @@
 {
-  "presets": [],
-  "plugins": []
+  "presets": [
+    "@babel/preset-typescript",
+    "@babel/preset-env"
+  ],
+  "plugins":["@babel/plugin-transform-runtime"]
 }
