--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "parcel build index.html --no-optimize --public-url ./",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
-    "test": "./node_modules/.bin/mocha -r jsdom-global/register"
+    "test": "mocha"
   },
   "author": "Renat",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/register": "^7.16.0",
@@ -20,21 +22,26 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
+    "ignore-styles": "^5.0.1",
     "jsdom": "14.1.0",
     "jsdom-global": "3.0.2",
     "mocha": "^9.1.3",
     "parcel": "^2.0.0",
+    "sinon-chai": "^3.7.0",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/sinon": "^10.0.6",
     "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "less": "^4.1.1",
+    "sinon": "^12.0.1",
     "uuid": "^3.4.0"
   },
   "engines": {
