sprint 4: adjust testing with singlton reset and window object reset

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,7 @@
         "-r",
         "test/babel-register.js",
         "-r",
-        "test/utils/dom.js",
-        "-r",
-        "ignore-styles",
+        "ignore-styles"
       ],
       "internalConsoleOptions": "openOnSessionStart",
       "name": "Mocha Tests",
