--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Y.Practicum training",
   "scripts": {
     "start": "node app.ts",
-    "dev": "parcel index.html",
-    "build": "parcel build index.html --no-optimize --public-url ./",
+    "build": "npx webpack",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
     "test": "mocha"
@@ -18,29 +17,36 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/register": "^7.16.0",
-    "@parcel/transformer-less": "^2.0.0",
+    "@sinonjs/fake-timers": "^8.1.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
+    "@types/sinonjs__fake-timers": "^8.1.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "chai": "^4.3.4",
+    "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
+    "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "14.1.0",
     "jsdom-global": "3.0.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "mocha": "^9.1.3",
-    "parcel": "^2.0.0",
     "sinon-chai": "^3.7.0",
-    "typescript": "^4.4.3"
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "@types/sinon": "^10.0.6",
     "@types/uuid": "^8.3.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
-    "less": "^4.1.1",
     "sinon": "^12.0.1",
     "uuid": "^3.4.0"
   },
