--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx webpack",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
-    "test": "mocha"
+    "test": "mocha",
+    "prepare": "husky install"
   },
   "author": "Renat",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "ignore-styles": "^5.0.1",
     "jsdom": "14.1.0",
     "jsdom-global": "3.0.2",
