--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Y.Practicum training",
   "scripts": {
     "start": "node app.ts",
-    "build": "npx webpack",
+    "build": "webpack",
+    "dev": "webpack serve",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
     "test": "mocha"
@@ -41,7 +42,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "@types/sinon": "^10.0.6",
