sprint 4: refactor - use webpack aliases

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,13 +30,10 @@
         "max-classes-per-file": "off",
         "no-shadow": "off",
         "prefer-arrow-callback": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "import/no-unresolved": "off"
     },
     "settings": {
-        "import/resolver": {
-          "node": {
-            "extensions": [".js", ".jsx", ".ts", ".tsx"]
-          }
-        }
+        "import/resolver": "webpack"
     }
 }
