--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Y.Practicum training",
   "scripts": {
     "start": "node app.ts",
-    "build": "webpack",
-    "dev": "webpack serve",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
+    "dev": "webpack serve --mode development",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix",
-    "test": "mocha"
+    "test": "NODE_PATH=./src mocha"
   },
   "author": "Renat",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
