--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Y.Practicum training",
   "scripts": {
     "start": "node app.ts",
-    "build-dev": "webpack --mode development",
+    "build": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "dev": "webpack serve --mode development",
     "check-types": "tsc --noEmit",
