--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
         "no-shadow": "off",
         "prefer-arrow-callback": "off",
         "import/no-extraneous-dependencies": "off",
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "no-alert": "off"
     },
     "settings": {
         "import/resolver": "webpack"
